# gila-integrator

./: .gitignore  LICENSE.txt  Pipfile  README.md  doc.md  environment.yml  fpm.toml  meson.build
app/: curve_sandwich.f90  extra_cases.f90  find_solutions.f90  find_solutions_arctanh.f90  find_solutions_exp.f90  find_solutions_initial.f90  gr_integration.f90  more_cases.f90  more_cases_e2.f90  more_cases_strict.f90  no_matter.f90  sr_normvar.f90  sr_normvar_01.f90  sr_normvar_02.f90  sr_normvar_03.f90  sr_variance.f90  sr_variance_normalized.f90
research/: inflation_exit.py  slow-roll.py  solution_plots.py
scripts/: arctanh_plots.py  athexp_plots.py  curve_sandwich.py  curve_sandwich_critical.py  curve_sandwich_lim.py  exp_plots.py  extended_slow-roll.py  heatmap.py  heatmap_detail.py  heatmap_normalized.py  inflation_exit.py  initial_plots.py  limit_plots.py  nomatter_plots.py  nomatter_slow-roll.py  selected_observables.py  selected_plots.py  slow-roll.py  slow-roll_extra.py  solution_plots.py  solutions_sr.py  sorting.py  universe.py  universe_components.py  universe_log.py
src/: fdiff.f90  finite_diff.f90  gi.f90  gi_arctanh.f90  gi_exp.f90  gila.f90  gr.f90  lib_io.f90  nv.f90
src/lib/: finite_diff.f90  gila.f90  lib_io.f90
src/main/: curve_sandwich.f90
src/scripts/: curve_sandwich_plots.py  switched_intervals.py
test/: fd_test.f90  gila_test.f90  io_test.f90
